--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci - Army ###
+### Focuses - Army ###
 TEX_second_revolution:0 "The Second American Revolution"
 TEX_second_revolution_desc:0 "The Second American Revolution is now upon us. Like the founding fathers before us, it is time to strike for freedom and democracy. America shall be reborn under a new generation of founding fathers."
 TEX_civil_war_tooltip:0 "The Civil War Begins..."
@@ -27,7 +27,7 @@ TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as
 TEX_army_rangers:0 "The Army Ranger corps"
 TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army."
 
-### Foci - Navy ###
+### Focuses - Navy ###
 TEX_navy:0 "Building our navy"
 TEX_navy_desc:0 "It is time that we modernise the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognise and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
 TEX_battle_ships:0 "Halsey's Battleships"
@@ -53,7 +53,7 @@ TEX_expand_annapolis_desc:0 "While Annapolis may have served the corrupt regime 
 TEX_marine_corps:0 "Marine Corps"
 TEX_marine_corps_desc:0 "As we work on modernise the military forces we must not neglect the Marine Corps. As one of the most elite branches of the American Armed forces, there are still many patriotic marines whom would glady help make sure that the corps is loyal to the true republic."
 
-### Foci - Air Force ###
+### Focuses - Air Force ###
 TEX_airforce:0 "The Patriotic American Air Force"
 TEX_airforce_desc:0 "As we go to war to fight for America, we will need to build up the Air force that has patriotism in their hearts and loyalty to the Long and the true America."
 TEX_air_support:0 "Ramey's Air Support"
@@ -73,7 +73,7 @@ TEX_found_the_wasp_desc:0 "It has been proposed that we create the Women Airforc
 TEX_rocketry:0 "Patriotic Rockets"
 TEX_rocketry_desc:0 "As we modernise our Air Force many of our scientists are looking into how rocketry and jet technology can be utilised in making our aircraft even better. Let us give them support and see what they can do for America."
 
-### Foci - Economic ###
+### Focuses - Economic ###
 TEX_war_economy:0 "Economics of War"
 TEX_war_economy_desc:0 "The civil war is upon us and in order to have victory we need not just the might of our army but the might of our economy. So let us get to work to bring victory for the True America!"
 TEX_populist_economics:0 "Populist Economics"
@@ -111,7 +111,7 @@ TEX_war_economics_desc:0 "The sinews of war are infinite money. So said Cicero i
 TEX_corporate_power:0 "Corporate Power"
 TEX_corporate_power_desc:0 "The might of corporations brings victory for Americans. With their vast resources and ingenuity we will have victory for every true and patriotic American. The riches the Corporations earn through the war shall go to all who fought for the True America and their might will make everyone tremble against the Eagle."
 
-### Foci - Politics ###
+### Focuses - Politics ###
 TEX_the_new_republic:0 "The New American Republic"
 TEX_the_new_republic_desc:0 "With the victory of the American Union State it is time to work on forming a new American Republic. It will take time but a newer more patriotic America shall be reborn from the ashes of the civil war."
 TEX_longs_republic:0 "Long's Republic"
@@ -145,7 +145,7 @@ TEX_new_american_century_desc:0 "We have established a new republic, that transf
 TEX_a_new_constitution:0 "The New Constitution"
 TEX_a_new_constitution_desc:0 "Regardless whom won the struggle for power it is time to write up a new constitution. This will help define the new government and establish the New American Republic that we have planned to establish. Now a new America shall be born from the ashes of the old. "
 
-### Foci - Reconstruction ###
+### Focuses - Reconstruction ###
 TEX_reconstruction_policies:0 "Reconstruction Policies"
 TEX_reconstruction_policies_desc:0 "With the civil war now over it is time to focus on rebuilding the rest of America. There is the natural cause of the country being destroyed by the war that needs to be repaired. We have to deal with the remnants of the Godless Syndicalists and make sure that America is restored. Time for Reconstruction!"
 TEX_rebuilding_the_south:0 "Rebuilding the South"
@@ -175,7 +175,7 @@ TEX_a_new_america_desc:0 "-"
 TEX_new_american_day:0 "New American Day"
 TEX_new_american_day_desc:0 "-"
 
-### Foci - Foreign Policy ###
+### Focuses - Foreign Policy ###
 TEX_long_doctrine:0 "Long Doctrine"
 TEX_long_doctrine_desc:0 "-"
 TEX_war_plan_gold:0 "War Plan Gold"
