--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -72,7 +72,7 @@ AUS_racial_tensions_desc:0 "Racial tensions are growing in the newly reborn Empi
 AUS_racial_revolts:0 "Racial Revolts"
 AUS_racial_revolts:0 "The racial tensions have escalated and ushered in open revolt. These are dark times for Austria."
 
-### Foci ###
+### Focuses ###
 AUS_eco_council:0 "The k.k. Ministeria"
 AUS_black_monday_1_focus:0 "k.k. Ministerium für Finanzen"
 AUS_black_monday_2_focus:0 "k.k. Ministerium für Handel"
@@ -571,7 +571,7 @@ AHE.21.b:0 "Keep them occupied."
 
 ### Flags and effects ###
 federate_austria_hungary:0 "Has decided to federate the Dual Monarchy during the Ausgleich, and Hungary has accepted.\n\n OR \n\nAustria has defeated Hungary (and annexed Budapest) and decided to federate in the past war negotiations."
-### Foci ###
+### Focuses ###
 AUS_embrace_pluralism:0 "Embrace Pluralism"
 AUS_embrace_pluralism_desc:0 "The time has come to federate the Empire to a more democratic government. The founding of the Danubian Federation will lead to a brighter future for all Austrian people."
 ### Events ###
