--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -333,7 +333,7 @@ BAT_RUS_authoritarian_democrat_party_long:0 "Soyuz Osvobozdeniya Pribaltiki (Lib
 BAT_RUS_paternal_autocrat_party:0 "SOP (Moderate)"
 BAT_RUS_paternal_autocrat_party_long:0 "Soyuz Osvobozdeniya Pribaltiki (Moderate Wing)"
 
-### Foci ###
+### Focuses ###
 
 BAT_Germanization:0 "Germanisation"
 BAT_Germanization_desc:0 "Almost two decades have passed since we achieved our status as a German protectorate. These decades have turned our nation into a German-dominated state, and we must respect their wishes. The Kaiser calls for Germanisation, and we shall follow suit. Drang Nach Osten!"
