--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -74,7 +74,7 @@ BHC_syndicalist_party_long:0 "Moderate Faction of Bharatiya"
 BHC_anarcho_syndicalist_party:0 "Anarcho-Syndicalists"
 BHC_anarcho_syndicalist_party_long:0 "Self-Culture Association of Bharatiya"
 
-### Foci ###
+### Focuses ###
 BHC_INC_Meeting_1:0 "Special Meeting of the INC"
 BHC_INC_Meeting_1_desc:0 "With Lala Lajpat Rai's term coming to an end, all of Calcutta is buzzing with excitement prior to the convening of the Indian National Congress. There it is expected a new head of state will be appointed, determining the direction of the Bharatiya Commune over the next few critical years."
 BHC_totalist_1:0 "Subhas Chandra Bose"
