--- a/localisation/KR_Bolivia_l_english.yml
+++ b/localisation/KR_Bolivia_l_english.yml
@@ -16,7 +16,7 @@ BOL_tankimport_desc:0 "We were the first nation in South America to use tanks in
 BOL_customs_union:0 "Andean Common Market"
 BOL_customs_union_desc:0 "Bolivia and Peru now share a common market! Only good may come of this"
 
-### Foci ###
+### Focuses ###
 BOL_trap:0 "Strategical Long Term Planning"
 BOL_trap_desc:0 "Our country must learn from it's mistakes, both administrative and military, if it is to survive the coming storm"
 BOL_infra_2:0 "Infrastructure Improvements"
