--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -27,7 +27,7 @@ PATRIANOVISTA:0 "Patrianovistas"
 BRA_MON_party:0 "AIB-AIPB"
 BRA_MON_party_long:0 "Coalizão Integralista Imperial Brasileira"
 
-### Foci ###
+### Focuses ###
 BRA_black_monday:0 "Lessons of Black Monday"
 BRA_black_monday_desc:0 "The chaos that met our country in the aftermath of Black Monday shook the already weakened economy to it's very core. It's time we start a reorganisation effort for our economy"
 BRA_industrial_recovery:0 "Industrial Recovery"
