--- a/localisation/KR_Bulgaria_l_english.yml
+++ b/localisation/KR_Bulgaria_l_english.yml
@@ -164,9 +164,9 @@ bulgaria.40.b:0 "The Agrarian People's Union!"
 bulgaria.40.c:0 "The Tsar's Loyalists!"
 bulgaria.40.e:0 "The Social Democratic Workers Party!"
 
-### Foci ###
+### Focuses ###
 
-### Army Foci ###
+### Army Focuses ###
 BUL_army_effort:0 "Bulgarian Land Forces"
 BUL_army_effort_desc:0 "The Bulgarian Land Forces are the finest army on the Balkan Peninsula, but our doctrines are looking to become sorely outdated. We must update them and train our troops in order to solidify our position."
 BUL_equipment_effort:0 "Develop New Equipment"
@@ -188,11 +188,11 @@ BUL_armour_effort_desc:0 "The Panzer is one of the major developments as a resul
 BUL_special_forces:0 "Adapt Our Army"
 BUL_special_forces_desc:0 "The Balkans are a manic terrain of soaring mountains and wild rivers. If we adapt certain elements of our Land Forces to deal with these extremes, then we shall have an obvious advantage."
 
-### Air Foci ###
+### Air Focuses ###
 BUL_rocket_effort:0 "Rocketry"
 BUL_rocket_effort_desc:0 "Rockets and other similar developments hold greater promise than conventional artillery in the long-term. We should take all the steps we can to find new applications of this."
 
-### Industry Foci ###
+### Industry Focuses ###
 BUL_industrial_effort:0 "Revitalise the Economy"
 BUL_industrial_effort_desc:0 "The Bulgarian economy has been stagnant since the 20s - the Tsar has ordered that we must find a way to change our agrarian society into an industrial one!"
 BUL_construction_effort:0 "State-Sponsored Industry"
@@ -220,7 +220,7 @@ BUL_extra_tech_slot_2_desc:0 "Many of our most important discoveries are as the 
 BUL_secret_weapons:0 "Special Research Division"
 BUL_secret_weapons_desc:0 "There are many advances in science and engineering which should perhaps be kept hidden from the public and even most researchers. By isolating a special group of researchers to work on these projects we will be assuring privacy and success."
 
-### Political Foci ###
+### Political Focuses ###
 BUL_political_effort:0 "Political Direction"
 BUL_political_effort_desc:0 "Bulgaria finds itself often torn between the interests of the Tsar and state. We should resolve this, in one way or another."
 
@@ -249,11 +249,11 @@ BUL_technology_sharing_desc:0 "Our allies have been working hard on their own th
 
 ### New Focus Tree ###
 
-### Pre-War/During War Foci ###
+### Pre-War/During War Focuses ###
 BUL_balkan_hegemony:0 "Balkan Hegemony"
 BUL_balkan_hegemony_desc:0 "Our victory in the Third Balkan War, the Weltkrieg, has ssured us domination over the Balkans. This hegemony grants us great sway and regional power."
 
-### Militarisation Foci ###
+### Militarisation Focuses ###
 BUL_weltkrieg_lessons:0 "Lessons of the Weltkrieg"
 BUL_weltkrieg_lessons_desc:0 "The war that we fought 20 years ago still influences how we fight today. Taking more lessons learnt from that conflict and applying them to modern warfare can only lead to beneficial results."
 BUL_equipment_development:0 "Equipment Development"
@@ -313,7 +313,7 @@ BUL_seize_thrace_desc:0 "The Ottomans are in a position of great instability - o
 BUL_dominate_albania:0 "Dominate Albania"
 BUL_dominate_albania:0 "The Albanian nation is weak, especially now without the support of the Ottoman Empire. If there is any time to assert our dominance over it, that time is now, so we can secure an Adriatic port."
 
-### Air Foci ###
+### Air Focuses ###
 BUL_aviation_effort:0 "Bulgarian Air Force"
 BUL_aviation_effort_desc:0 "The Weltkrieg taught us important lessons regarding the war in the air. Whatever comes next to Bulgaria will require us to remember and apply this once more."
 BUL_fighter_focus:0 "Assuring Air Superiority"
@@ -327,7 +327,7 @@ BUL_CAS_effort_desc:0 "Engaging directly with enemy forces on the ground with ne
 BUL_NAV_effort:0 "Naval Aviation"
 BUL_NAV_effort_desc:0 "By integrating a section of our Air Force with the Navy, the Aegean and Black Seas should be brought further under our influence."
 
-### Naval Foci ###
+### Naval Focuses ###
 BUL_naval_effort:0 "Bulgarian Navy"
 BUL_naval_effort_desc:0 "A strong fleet is vital if we are to look beyond simply our own borders. Protecting our trade and coastlines shall require a strong naval force."
 BUL_flexible_navy:0 "Two Seas Fleet"
