--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -225,7 +225,7 @@ CAN_joins_ACW:0 "Canada intervened in the American Civil War"
 CAN_attack_DEN:0 "Canada declared war on Denmark"
 CAN_threaten_DEN:0 "Canada claims Danish overseas territory"
 
-### Foci ###
+### Focuses ###
 
 CAN_isac:0 "Create the ISAC"
 CAN_isac_desc:0 "A number of university presidents and scientific leaders meeting in Toronto have called for the formation of a new organisation to co-ordinate research among the member states of the British Empire. The work of co-coordinating these links is to be carried out by the Imperial Scientific and Academic Council, located and funded by Canada, with contributions from the rest of the Entente"
