--- a/localisation/KR_Centroamerica_l_english.yml
+++ b/localisation/KR_Centroamerica_l_english.yml
@@ -136,7 +136,7 @@ centro.33.t:0 "Intergration of El Salvador"
 centro.33.d:0 "Today, the paritaly autonomous region of El Salvador, was finally integrated into our growing nation, the region's governor Agustín Farabundo Martí has declared that he will now participate in national politics, and he has taken the lead of the new Syndicalist Partido Sindical."
 centro.33.a:0 "A great day for Centroamérica"
 
-### Foci ###
+### Focuses ###
 GUA_Economic_Policy:0 "Economic Policy"
 GUA_Mixed_Economy:0 "Mixed Economy"
 GUA_Expand_Industry:0 "Expand Industry"
