--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -37,7 +37,7 @@ CHL_syndicalist_party_long:0 "Partido Sindicalista Chileno"
 CHL_totalist_party:0 "PRP-PSC"
 CHL_totalist_party_long:0 "Partido Revolucionario Permanente"
 
-## Foci ## 
+## Focuses ## 
 CHL_air:0 "Update Airforce Philosophy"
 CHL_air2:0 "Aerial Production"
 CHL_fighter:0 "Fighter Effort"
