--- a/localisation/KR_Colombia_l_english.yml
+++ b/localisation/KR_Colombia_l_english.yml
@@ -45,7 +45,7 @@ COL_liberal:0 "Liberal Government"
 COL_conservative:0 "Conservador Government"
 COL_unir:0 "UNIR Coalition Government"
 
-### Foci ###
+### Focuses ###
 COL_the_mission:0 "Recall the Mission to Mitteleuropa"
 COL_the_mission_desc:0 "Our mission to Mitteleuropa, led by General Pinilla, has been abroad for some time now, it's high time we finally recall them and see what the world's foremost Great Power has to teach our armed forces"
 COL_army_doctrine:0 "German Military Doctrine"
