--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -246,7 +246,7 @@ FRA_wip:0 "This focus is not yet implemented. This will never unlock and will ha
 latin_american_union:0 "Latin American Union" #???
 FRA_sorelian_economy_tooltip:0 "§YYou will receive 4 infantry divisions in Paris§!\n"
 
-### Foci ###
+### Focuses ###
 
 FRA_amenagement:0 "Aménagement du Territoire"
 FRA_amenagement_desc:0 "Our territory is vast and unequally developed, some rural regions having been left behind while others prosper and grow at spectacular rates. We must encourage local initiatives and consider ambitious infrastructure projects to solve that problem on a local and national level."
