--- a/localisation/KR_Denmark_l_english.yml
+++ b/localisation/KR_Denmark_l_english.yml
@@ -8,7 +8,7 @@ DEN_national_defence_tp:0 "Establish a National Defence Network"
 DEN_sweden3_tp:0 "Boost relations with Scandinavia"
 DEN_atlantic2_tp:0 "Boost relations with North America"
 
-### Foci ###
+### Focuses ###
 DEN_industry_expansion1:0 "Industrial Effort"
 DEN_industry_expansion1_desc:0 "Focus all our political efforts on building up the civilian industry in a great leap forward."
 DEN_industry_expansion2:0 "Construction Effort"
