--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -69,7 +69,7 @@ DEH_riaf:0 "Royal Indian Air Force"
 DEH_war_fever:0 "Reunion Fever"
 DEH_war_fever_desc:0 "A fever to reunite the Indian sub-continent has taken hold, with crowds in the capital chanting the names of those enemies who would prevent the nation from reuniting India!"
 
-### Foci ###
+### Focuses ###
 DEH_Industry1_focus:0 "Expand Delhi's Civilian Industry"
 DEH_Industry1_focus_desc:0 "The state of our industry is lacking. We should concentrate our efforts on researching new designs for our factories."
 DEH_construction1_focus:0 "Start Building Civilian Factories"
