--- a/localisation/KR_Ecuador_l_english.yml
+++ b/localisation/KR_Ecuador_l_english.yml
@@ -41,7 +41,7 @@ ECU_syndicalist_party_long:0 "Union Sindicalista de Ecuador"
 ECU_totalist_party:0 "MME"
 ECU_totalist_party_long:0 "Movimento Maximista Ecuatoriano"
 
-### Foci ###
+### Focuses ###
 ECU_blackmondaycrisis:0 "The Thursday Crisis"
 ECU_blackmondaycrisis_desc:0 "Deep crisis takes a hold of our nation..."
 ECU_gallo:0 "Gallo Steps In"
