--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -34,7 +34,7 @@ ETH_ENT_Offer:0 "An Offer from the Entente"
 ETH_Ger_S:0 "In the German Sphere of Influence"
 ETH_OTT_R:0 "Strategic Placement for the Ottoman Empire"
 
-### Foci ###
+### Focuses ###
 ETH_reform:0 "The Reforms!"
 ETH_reforms_desc:0 "Our emperor Haile Selassie is known to have ambitions of modernisation for the country. This includes not only plans to build new factories and infrastructure and modernise our army, but also several legal and institutional reforms to improve the quality of life for our people. However, the broadening of these reforms will mean an end to many privileges of the Orthodox Church and the nobility, which will attract much resistance from the conservative circles."
 ETH_Nobility:0 "Appease the Nobility"
