--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -62,7 +62,7 @@ BEL_Farmers_aid_desc:0 "By aiding the farmers who were hit very hard by the revo
 BEL_Nationalise_Basic:0 "Nationalised Basic Industry"
 BEL_Nationalise_Basic_desc:0 "The next step in Plan De Man consists of nationalising the basic industries to better fight unemployment and to strengthen the government's grip over the economy."
 
-### Foci ###
+### Focuses ###
 BEL_Increased_Trade_Antwerp:0 "Dredging the Westerschelde"
 BEL_Enlarge_Merchant_Marine:0 "Enlarge the Merchant Marine"
 BEL_Foreign:0 "Foreign Policy"
