--- a/localisation/KR_Georgia_l_english.yml
+++ b/localisation/KR_Georgia_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 GEO_The_Peoples_Guard:0 "Military Focus"
 GEO_The_Peoples_Guard_desc:0 "-"
 GEO_Army_Modernization:0 "Army Modernisation"
