--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 
-### Foci ###
+### Focuses ###
 GER_doctrine_new:0 "Military Reform"
 GER_doctrine_new_desc:0 "After the death of Hans von Seeckt and the retirement of August von Mackensen, the Chief of General Staff has been involved in constant debate over which methods the German Army should use as a tactical basis, or doctrine."
 GER_doctrine_great_war:0 "Squad Tactics"
