--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 HAW_politics:0 "Future of Hawai'i"
 HAW_politics_desc:0 "With Hawaii now independent many are wondering what will become of our Island Nation. There are some whom wish to restore the monarchy while others wish to establish a republic. Then there is the under class which is starting to wonder if it should follow in the footsteps of the CSA..."
 
-### Politics Foci ###
+### Politics Focuses ###
 HAW_monarchy:0 "Restore the Monarchy"
 HAW_monarchy_desc:0 "We have decided to restore the monarchy and crown Jonah Kuhio Kalanianaʻole as king of Hawaii. All have gathered at the ʻIolani Palace in Honolulu watch the ceremony. Today is a great day as native rule has been restored to Hawai'i."
 HAW_return_ceded_lands:0 "Return the Ceded Lands"
@@ -38,7 +38,7 @@ HAW_peoples_victory_desc:0 "We have victory. The old capitalist elites are destr
 HAW_constitution:0 "Hawaii's Constitution"
 HAW_constitution_desc:0 "Now that the government of Hawai'i is being finalised it would do good to have a constitution signed for the people. Regardless of what form of government that we have decided upon, we shall have a constitution."
 
-### Economy Foci ###
+### Economy Focuses ###
 HAW_building_our_economy:0 "Building Our Economy"
 HAW_building_our_economy_desc:0 "Now that we are independent, we should look to building up the economy of Hawai'i and make sure that our islands are happy and prosperous."
 HAW_hawaiian_bounty:0 "Bounty of Hawai'i" 
@@ -54,7 +54,7 @@ HAW_land_reform_desc:0 "While some are advocating for keeping the plantation str
 HAW_thriving_economy:0 "Thriving Economy"
 HAW_thriving_economy_desc:0 "We have done it, our economy is now booming. We have achieved a degree of prosperity for our islands and happiness has come to Hawai'i again."
 
-### Navy Foci ###
+### Navy Focuses ###
 HAW_navy:0 "Hawai'ian Navy"
 HAW_navy_desc:0 "We are an island nation and surrounded by water. For us to survive in the world we need to build up the Hawai'ian navy and prepare it to defend our islands."
 HAW_submarine_doctrines:0 "Submarine Doctrines"
@@ -76,7 +76,7 @@ HAW_trade_interdiction_desc:0 "As we lie in the middle of the Pacific and trade 
 HAW_carriers:0 "Carrier Support"
 HAW_carriers_desc:0 "With our navy being modernised, time has come to focus on Aircraft Carriers. Carriers will be one of the major tools of defending our island from attack."
 
-### Army Foci ###
+### Army Focuses ###
 HAW_army:0 "Hawai'ian National Guard"
 HAW_army_desc:0 "We shall form the Hawai'ian National Guard. While Hawai'i will not be an expansionist power we will train the people to better defend our islands from any threat that comes and so that Hawai'i remains free from all enemies."
 HAW_focus_on_planning:0 "Joint Chiefs of Staff"
@@ -92,7 +92,7 @@ HAW_strategic_information_services_desc:0 "To protect the islands we should form
 HAW_new_army:0 "A Modern Army"
 HAW_new_army_desc:0 "To build and modernise our army further we shall work on researching modern firearms for our soldiers. As the wars advance we shall keep up with the times to keep our islands safe."
 
-### Air Foci ###
+### Air Focuses ###
 HAW_airforce:0 "Hawai'ian Air-Force"
 HAW_airforce_desc:0 "To help defend our islands we shall create the Hawai'ian Air Force. The Airforce shall keep our skies free from any and all threats to our islands."
 HAW_fighters:0 "Favour Fighters"
@@ -110,7 +110,7 @@ HAW_hawaiian_jets_desc:0 "The future of aircraft is jets and we should invest ou
 HAW_radar:0 "Warning Systems"
 HAW_radar_desc:0 "We need to focus on Several Warning systems to help better protect Hawai'i from any income air forces that will attack. A sudden attack could be devastating to our country but if we are aware of what will come we can keep our people safe."
 
-### Foreign Policy Foci ###
+### Foreign Policy Focuses ###
 HAW_foreign:0 "Foreign Policy"
 HAW_foreign_desc:0 "Now that our government has been finalised we should look to the future and seek allies to protect our Nation. Hawai'i is small and many larger nations would find it easy to conquer us. To avoid that we should seek allies."
 HAW_american_protectorate:0 "American Protectorate"
