--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -90,7 +90,7 @@ POLITICS_STEPHEN_X_DESC:0 "Pope Stephen X, formerly Elia Cardinal dalla Costa, i
 POLITICS_JOHN_XXIII_DESC:0 "Pope John XXIII, formerly Achille Cardinal Liènart, is a controversial choice as Pope. He is a well-known socialist, considered by some to even be a radical, and it's possible he was chosen by the Papacy due to the possibility his socialist leanings will lead to a reconciliation with the south."
 POLITICS_JULIUS_IV_DESC:0 "Pope Julius IV, formerly Theodor Cardinal Innitzer, is a man renowned for his passion. He has been involved in the running of the Italian Federation for many years, and has declared syndicalism to be an evil he will battle until it is eradicated from the Earth."
 
-### Foci ###
+### Focuses ###
 ITA_Black_Monday:0 "Aftermath of Black Monday"
 ITA_Black_Monday_desc:0 "The entire nation has fallen into despair and unemployment with the collapse of the economy. Finding our way out will be a long road, though we are better off than some."
 ITA_Road_Network:0 "Expand Road Network"
