--- a/localisation/KR_La_Plata_l_english.yml
+++ b/localisation/KR_La_Plata_l_english.yml
@@ -15,7 +15,7 @@ ARG_merciless_union_desc:0 "The ''Union'' of La Plata showed its true colours, c
 ARG_virreinatos:0 "The Virreinato Manifesto"
 ARG_PRU_ANTISOC:0 "The Buenos Aires-Lima Axis"
 
-### Foci ###
+### Focuses ###
 ARG_renewed_expansionism:0 "Renewed Expansionism"
 ARG_renewed_expansionism_desc:0 "Our Nation is now ready to reclaim it's legacy; the Viceroyalty of Rio de La Plata"
 ARG_virreinato:0 "The Virreinato Manifesto"
