--- a/localisation/KR_Lithuania_l_english.yml
+++ b/localisation/KR_Lithuania_l_english.yml
@@ -46,7 +46,7 @@ LIT_paternal_autocrat_party_long:0 "Supporters of Kazimieras Viktoras Tiškevič
 LIT_national_populist_party:0 "LTIP (Speak Lithuanian)"
 LIT_national_populist_party_long:0 "Lietuvių tautos interesų partija"
 
-### Foci ###
+### Focuses ###
 LIT_black_monday_hit:0 "Aftermath of the Black Monday"
 LIT_black_monday_hit_desc:0 "The Black Monday is upon us... But the state must hold on! As it always did!"
 LIT_conservative_reform:0 "Begin Industrial Expansion"
