--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -277,7 +277,7 @@ mexico.68.d:0 "We have been defeated by the American forces, they have driven us
 mexico.68.a:0 "We have no choice..."
 mexico.68.b:0 "Never! We will fight to the death!"
 
-### Foci ###
+### Focuses ###
 MEX_Embrace_Totalism:0 "Embrace Totalism"
 MEX_Establish_the_Maximato:0 "Establish The Maximato"
 MEX_Crack_Down_On_Strikes:0 "Crack Down On Strikes"
