--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -103,7 +103,7 @@ mittel.15.d:0 "We have been beaten by the Germans in Africa, and we wouldn't wan
 mittel.15.a:0 "Give up the colonies in exchange for peace"
 mittel.15.b:0 "Never! Angola e Nossa!"
 
-### Foci ###
+### Focuses ###
 MAF_African_Resources:0 "African Resources"
 MAF_Oil_In_Nigeria:0 "Oil In Nigeria"
 MAF_Mines_In_The_Kongo:0 "Mines In The Kongo"
