--- a/localisation/KR_Mongolia_l_english.yml
+++ b/localisation/KR_Mongolia_l_english.yml
@@ -52,7 +52,7 @@ MON_NO_DEM_COL_POR:0 "Mongolia has recognised Macau as ours"
 MON_Khan_cav_the_best:0 "Ungern's Guard"
 MON_Khan_bests:0 "Ungern's Guard"
 
-### Foci ###
+### Focuses ###
 MON_reinforce_army:0 "Reinforce the Mongol Army"
 MON_reinforce_army_desc:0 "-"
 MON_improve_inf_I:0 "Improve Urga Roads"
