--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -50,7 +50,7 @@ NFA_aumoniers_idea:0 "Aumôniers"
 NFA_underground_railroad_idea:0 "The Underground Railroad"
 NFA_effort_national_idea:0 "Effort National"
 
-### Foci ###
+### Focuses ###
 NFA_industrial_revival:0 "Industrial Expansion"
 NFA_industrial_revival_desc:0 "Our industry here in Africa is far behind the one the communards have on the mainland. If we want to defeat them we’ll have to strengthen our industry significantly."
 NFA_sahara_census:0 "Begin the Saharan Census and Inventory"
