--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci - Economic ###
+### Focuses - Economic ###
 NEE_building_our_economy:0 "Building our Economy"
 NEE_building_our_economy_desc:0 "As we are now cut off from the rest of America due to the chaos of the civil war, we should focus on building our economy. It will take time, but it will help make sure that we can build up our own economy."
 NEE_new_haven_railroad:0 "New Haven Railroad"
@@ -22,7 +22,7 @@ NEE_aviation_industry_desc:0 "To expand our industry, we should help promote and
 NEE_maritime_industry:0 "Maritime Industry"
 NEE_maritime_industry_desc:0 "The sea is our lifeblood. It always has been since before even the colonists were here. We should do what we can to help support our Maritime Industry and trade. By expanding our ports we will be able to have not only better Maritime trade, but also prepare our coast guard should we go to war."
 
-### Foci - Army ###
+### Focuses - Army ###
 NEE_national_guard:0 "New England National Guard"
 NEE_national_guard_desc:0 "As the chaos of war engulfs the rest of the country, we should combine all the national guard forces of the states that make up New England in order to be a single National Guard Force. This will help protect us should war come to us."
 NEE_planed_battle:0 "McLaws Planned Battle"
@@ -42,7 +42,7 @@ NEE_curiser_tanks_desc:0 "As part of the Combined Arms strategy, we should focus
 NEE_new_officers:0 "New Officers"
 NEE_new_officers_desc:0 "With the National Guard of New England's modernisation nearly done. We should bring in the new officers from West Point into the Army. This will help provide a new generation of officers to help finish our modernisation of the Army."
 
-### Foci - Naval ###
+### Focuses - Naval ###
 NEE_coast_guard:0 "New England Coast Guard"
 NEE_coast_guard_desc:0 "We should reorganise the various Coast Guard of the different states that make up new England into one organisation. By reorganising this way, we will form the New England Coast Guard and better defend our coast."
 NEE_submarines_effort:0 "Submarine tactics and doctrines"
@@ -58,7 +58,7 @@ NEE_cruisers_doctrines_desc:0 "We should focus on light cruisers and destroyers,
 NEE_yankee_marines:0 "Yankee Marines"
 NEE_yankee_marines_desc:0 "We should create our own version of the Marine Corps based on the United States Marine Corps. Their elite training and prestige will suit us well in our own version that some have already dubbed, the Yankee Marines."
 
-### Foci - Air ###
+### Focuses - Air ###
 NEE_aviation:0 "New England Air Force"
 NEE_aviation_desc:0 "We should create the New England Air Force to defend the skies of New England. The question is should we favour bombers or fighters?"
 NEE_fighters:0 "Air support"
@@ -76,7 +76,7 @@ NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots common
 NEE_boston_rockets:0 "Boston Rockets"
 NEE_boston_rockets_desc:0 "As we proceed to improve our technology in regards to aircraft, a number of leading scientists seek to push for rockets with the hope of finding a way to improve our aircraft. We should give them support and see where this takes us."
 
-### Foci - Political ###
+### Focuses - Political ###
 NEE_second_hartford_convention:0 "Second Hartford Convention"
 NEE_second_hartford_convention_desc:0 "As we have recently became independent following the Canadian take over of the region, a number of leading politicians are proposing that we come together at Hartford to figure out our future."
 NEE_torch_of_liberty:0 "Torch of Liberty"
@@ -94,7 +94,7 @@ NEE_new_england_constitution_desc:0 "After many days of debate throughout the Ha
 NEE_indepedent_new_england:0 "Independent New England"
 NEE_indepedent_new_england_desc:0 "It is time to cast our selves from the United States. Though we were once Americans, the chaos that has engulfed the rest of the country has shown us that the only way forward for New England is to be an independent country. A new chapter shall begin!"
 
-### Foci - Foreign Policy ###
+### Focuses - Foreign Policy ###
 NEE_entente_policy:0 "Policy in the Entente"
 NEE_entente_policy_desc:0 "We are part of the Entente thanks to the Canadians. However, we should also set our own direction to help reinforce and show that we are not just a mere puppet of the Canadians."
 NEE_canadian_freindship:0 "Canadian Friendship"
