--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -146,7 +146,7 @@ OTT_paternal_autocrat_party_long:0 "Selamet-i Osmaniye Fırkası"
 OTT_national_populist_party:0 "Bozkurtlar"
 OTT_national_populist_party_long:0 "Bozkurtlar Grubu"
 
-### Foci ###
+### Focuses ###
 OTT_internal_affairs:0 "Matters of the State"
 OTT_internal_affairs_desc:0 "-"
 OTT_political_interests:0 "Political Interests"
