--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 CAL_civil_war:0 "The Second Civil War"
 CAL_civil_war_desc:0 "Chaos rages in the eastern part of the United States as the country has exploded into Civil War. However, we out here in the east remain prosperous and wealthy. If we wish to remain so, we need to keep it to ourselves. We shall not follow the dictates of the east when they interfere with our prosperity."
 
-### Foci - Political ###
+### Focuses - Political ###
 CAL_beacon_of_democracy:0 "Beacon of Democracy"
 CAL_beacon_of_democracy_desc:0 "With Syndicalists in the Midwest and American First members in the South and everything in between in the rest of the country, the east is losing the democracy of America. We on the Pacific coast remain the last beacon of democracy. We shall remain a bright light in a dark time."
 CAL_encourge_free_thought:0 "Encourage Free Thought"
@@ -22,7 +22,7 @@ CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American De
 CAL_new_nationalism:0 "New Nationalism"
 CAL_new_nationalism_desc:0 "We have formed a new identity, Pacifican, and more and more are finding themselves loyal to the Pacific States of America over loyalty to the USA. We should encourage this new nationalism and work on making people loyal to our new country over the USA."
 
-### Foci - Military - Army ###
+### Focuses - Military - Army ###
 CAL_military:0 "Building a military"
 CAL_military_desc:0 "With chaos raging in the east, we need a proper military to defend the Pacific Coast for when the chaos reaches our borders. In order to defend our democracy and prosperity we must prepare the military for such a terrible occasion."
 CAL_army:0 "Army of the Pacific"
@@ -50,7 +50,7 @@ CAL_fighting_for_california_desc:0 "It is time to fight for the people of the We
 CAL_californian_rangers:0 "Californian Rangers"
 CAL_californian_rangers_desc:0 "Our military has put forward a plan to establish an elite military unit, called the Californian Rangers. They would be a special forces unit designed to deal with any and all threats to our republic."
 
-### Foci - Military - Navy ###
+### Focuses - Military - Navy ###
 CAL_navy:0 "The Pacific Navy"
 CAL_navy_desc:0 "When we left the Union due to all the chaos back east, a large chunk of the navy went with us. Now it is time to reorganise it into the Pacific States Navy. However the question of which is better for the navy, Aircraft Carriers or Battleships has been carried over to our new navy. We will have to resolve this debate."
 CAL_battleships:0 "Favour Battleships"
@@ -76,7 +76,7 @@ CAL_californian_marines_desc:0 "The United States Marine Corps is one of the mos
 CAL_island_training:0 "Island Training"
 CAL_island_training_desc:0 "As we are on the West Coast it is very likely we are going to have to deal with plenty of islands in the Pacific if we get involved in any of the numerous conflicts over there. As such in order to prepare for such a conflict we should begin training the Marines to be able to handle jungle warfare."
 
-### Foci - Military - Air ###
+### Focuses - Military - Air ###
 CAL_airforce:0 "Pacific Air Force"
 CAL_airforce_desc:0 "In order to properly protect the Pacific Coast from the Chaos of the east, we need to build up our Air Force. The principal question is what is the best way to use the Air Force, Air Supremacy or Battlefield Support."
 CAL_air_supremecy:0 "Favour Air Supremacy"
@@ -94,7 +94,7 @@ CAL_expand_air_ports_desc:0 "To support the new Pacific Air Force, we should wor
 CAL_rocketry:0 "Pacific Rocketry"
 CAL_rocketry_desc:0 "As we advance our air force our scientists are encouraging us to look into rocketry. We should support our inventors by offering research grants for those that will look into rocketry and jet technology for us."
 
-### Foci - Economic ###
+### Focuses - Economic ###
 CAL_economic_policy:0 "Enhancing Our Prosperity"
 CAL_economic_policy_desc:0 "Of all the regions of the United States, the Pacific States remained the wealthiest. While we were hit by the Great Depression as well, we were able to soften its blow here in the West by rebounding quicker then in the East. With the Civil War engulfing the country we should do what we can to safeguard our prosperity."
 CAL_free_trade:0 "Free Trade"
@@ -124,7 +124,7 @@ CAL_support_nbc_desc:0 "We should support our various radio companies from NBC t
 CAL_west_coast_bounty:0 "The West Coast's Bounty"
 CAL_west_coast_bounty_desc:0 "The west coast holds a large bounty of natural resources that lay untapped. Of particular notice are oil fields and rubber. Both of which shall be of particular useful for our industries as we we can now produce and sell them around the world in addition to using it for our own needs."
 
-### Foci - Foreign ###
+### Focuses - Foreign ###
 CAL_foreign_policy:0 "Foreign Policy"
 CAL_foreign_policy_desc:0 "It is time to chose allies for the Pacific States. We can not remain isolated if we are to survive as an independent country. Thus we should seek out potential allies and friends for the Pacific States of America."
 CAL_join_entente:0 "Join the Entente"
