--- a/localisation/KR_Paraguay_l_english.yml
+++ b/localisation/KR_Paraguay_l_english.yml
@@ -22,7 +22,7 @@ PAR_syndicalist_party_long:0 "Partido Sindicalista de Paraguay"
 PAR_totalist_party:0 "PMP"
 PAR_totalist_party_long:0 "Partido Maximalista Paraguayo"
 
-### Foci ###
+### Focuses ###
 PAR_libertadomuerte:0 "Libertad o Muerte"
 PAR_rebuildgovernment:0 "Rebuild the Government"
 PAR_deargentinezation:0 "De-Aargentinsation of the Government"
