--- a/localisation/KR_Piratini_l_english.yml
+++ b/localisation/KR_Piratini_l_english.yml
@@ -41,7 +41,7 @@ PIR.1.a: "Partido Conservador - Bornhausen and Gomes da Silva"
 PIR.1.b: "Partido Republicano - Camargo and Munhoz da Rocha"
 PIR.1.c: "Partido Federal - Clotário Portugal and Barbosa Martins"
 
-### Foci ###
+### Focuses ###
 PIR_mil:0 "Newborn Armed Forces"
 PIR_mil2:0 "Organise the Riograndense Armed Forces"
 PIR_army:0 "Artillery Battalions"
