--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -84,7 +84,7 @@ PLC_peace_idea_desc:0 "It is through strong diplomacy, rather than violence, tha
 PLC_common_currency_idea:0 "Common Currency"
 PLC_common_currency_idea_desc:0 "The two economic systems of Poland and Lithuania are brought into union through a combined currency, a new introduction that will form the backbone of our new economy."
 
-### Foci ###
+### Focuses ###
 PLC_poland_first:0 "Warsaw as the Capital"
 PLC_striking_the_balance:0 "A New Capital"
 PLC_lithuania_first:0 "Vilnius as the Capital"
