--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -59,7 +59,7 @@ PRF_new_plan_desc:0 "All of India must strive as one - this will be how our nati
 PRF_rule_the_skies:0 "Rule the Skies"
 PRF_rule_the_skies_desc:0 "A national effort to produce planes more cheaply will greatly expand the nation's air capacity."
 
-### Foci ###
+### Focuses ###
 PRF_political_reform:0 "Osman Addresses the Council"
 PRF_political_reform_desc:0 "A special session of the Princely Council has been planned, and it is expected that the gathered Princes will present a plethora of reforms to the Nizam - reforms that are likely intended to put more power in their hands, and perhaps even open up positions on the council to those outside the aristocracy. It is a bold plan, though some are nervous as to whether the Nizam will agree."
 PRF_rebuke_council:0 "Refuse Proposed Reforms"
