--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 RUS_real_politik:0 "Foreign Policy: Realpolitik"
 RUS_real_politik_desc:0 "Realpolitik is politics or diplomacy based primarily on considerations of given circumstances and factors, rather than explicit ideological notions or moral and ethical premises. The term Realpolitik is sometimes used pejoratively to imply politics that are coercive, amoral, or Machiavellian. We enjoy this notion."
 RUS_expansionism:0 "Foreign Policy: Expansionism"
 RUS_expansionism_desc:0 "The theory of expansionism constitutes that Russia's borders are only as safe as they are distant from our heartland. Every neighbouring state which is not a puppet of the Russian state is, as such, a threat or a target, depending on their military and political strength. Needless to say, this adaption of policies will not be well-liked by the rest of the world."
-expansionism_tooltip_russia:0 "§GBy taking Expansionism, you will have more aggressive options in the diplomatic events and foci, but you will increase world tension and anger the countries around you!§!"
+expansionism_tooltip_russia:0 "§GBy taking Expansionism, you will have more aggressive options in the diplomatic events and focuses, but you will increase world tension and anger the countries around you!§!"
 
 russia_pick_middle_east_direction_tooltip:0 "You have to finish the Caucasus and Central Asian directions before taking this one, the conditions to finish these directions being: §YCaucasus§!: Own or have as a puppet §GKrasnodar§!, §GCaucasus mountains§!, §GGeorgia§! and §GBaku§!; §YCentral Asia§!: Own or have as a puppet §GAstrakhan§!, §GAlma-Ata§!, §GUrgench§! and §GTashkent§!"
 russia_pick_far_east_direction_tooltip:0 "You either have to finish the Caucasus and Central Asian directions or have to finish the Central Asian direction and be blocked by Germany in the caucasus before taking this one, the conditions to finish these directions being: §YCaucasus§!: Own or have as a puppet §GKrasnodar§! and §GCaucasus mountains§!; §YCentral Asia§!: Own or have as a puppet §GAstrakhan§!, §GAlma-Ata§!, §GUrgench§! and §GTashkent§!"
