--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -321,7 +321,7 @@ RUS_auth_dem_party_long:0 "Siloviki"
 RUS_tsar_party:0 "RMS"
 RUS_tsar_party_long:0 "Russkyi Monarchicheskyi Soyuz"
 
-### Foci ###
+### Focuses ###
 RUS_KRSKY:0 "President Kerensky"
 RUS_KRSKY_desc:0 "President Kerensky has governed our nation for over twenty years, through two wars. It's amazing that he has managed to survive all the attempts on his life."
 unlock_focuses:0 "§GThis focus will eventually be automatically bypassed and will unlock the other focuses§! \n"
@@ -486,7 +486,7 @@ RUS_military_spirit_desc:0 "The post-war young generation is told to be "lost", 
 RUS_anti_bolshevik:0 "Anti-Bolshevik Policies"
 RUS_anti_bolshevik_desc:0 "The Bolsheviks are the enemies of Russia, they destabilise our nation and grow dissent in our factories, they must be put down."
 
-rus_special_unlock_tooltip:0 "You must take the 6 foci of an industrial path to unlock this"
+rus_special_unlock_tooltip:0 "You must take the 6 focuses of an industrial path to unlock this"
 RUS_nuclear_effort:0 "Kremlin Project"
 RUS_nuclear_effort_desc:0 "We must avoid lagging behind our rivals in nuclear fission, the most advanced of modern sciences."
 RUS_rocket_effort:0 "Rocketry Effort"
