--- a/localisation/KR_Soviet_l_english.yml
+++ b/localisation/KR_Soviet_l_english.yml
@@ -39,7 +39,7 @@ SOV_totalist_party:0 "Internationalists"
 SOV_syndicalist_party:0 "Federalists"
 SOV_radical_socialist_party:0 "Autonomists"
 
-### Foci ###
+### Focuses ###
 SOV_FRUNZE:0 "Elect Frunze's Autonomists!"
 SOV_FRUNZE_desc:0 "Frunze's autonomists faction have managed to gain wide support from the Russian majority and have won the first general soviet elections!"
 SOV_SOVNARKOM:0 "Elect Bukharin's Federalists!"
