--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -85,7 +85,7 @@ SPR_foreign_unit_arrives:0 "Foreign-trained unit arrives in Barcelona\n"
 SPR_supplied_unit_arrives:0 "Supplied militia unit arrives in Burgos\n"
 SPR_become_republic:0 "Name changed to §YThe Spanish Republic§!\n"
 
-### Foci ###
+### Focuses ###
 SPR_strengthen_kingdom:0 "Strengthen the Kingdom"
 SPR_strengthen_kingdom_desc:0 "The kingdom is in dire straits, and many predict we will fall to civil war before long. We must consolidate our position and decide how we will best fend off impending disaster."
 SPR_focus_diplomacy:0 "Focus on Diplomacy"
