--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -153,7 +153,7 @@ SWE_upplund_desc:0 "The Uppsala and Lund Universities are among the finest in Eu
 SWE_black_monday:0 "Swedish Black Monday"
 SWE_black_monday_desc:0 "With our economy battered thanks to the economical meltdown in Germany, our most important trading partner, it'll take extensive industrial reforms to restore our nation."
 
-### Foci ###
+### Focuses ###
 
 SWE_TNGM:0 "The New Government"
 SWE_TNGM_desc:0 "The election of 36 has finally come to pass and the new government must prepare for future policies and form a cabinet."
