--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -457,7 +457,7 @@ TRM_modest_society:0 "Modest Society"
 TRM_anti_kolchak:0 "Anti-Kolchak Sentiments"
 TRM_anti_kolchak_desc:0 "Kolchak's regime has few supporters and many haters. Most of liberals are in open opposition to him, while his own generals are not trustworthy. There even is a chance that they will start a coup to overthrow Kolchak."
 
-### Foci ###
+### Focuses ###
 TRM_Navy_Start:0 "Eastern Harbour"
 TRM_Navy_Vlad:0 "Improve the Vladivostok Port"
 TRM_Navy_Jap:0 "Improve Trade Relations With Japan"
