--- a/localisation/KR_Turkey_l_english.yml
+++ b/localisation/KR_Turkey_l_english.yml
@@ -30,7 +30,7 @@ TUR_paternal_autocrat_party_long:0 "Millî Nizam Partisi"
 TUR_national_populist_party:0 "Bozkurtlar"
 TUR_national_populist_party_long:0 "Bozkurtlar Grubu"
 
-### Foci ###
+### Focuses ###
 
 ### Events ###
 
