--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -18,7 +18,7 @@ USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Car
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
 USA_peruvian_invitation_tooltip:0 "The government of Peru stands as a bulwark against syndicalism in the Andes. We should make sure that they remain friendly to American Businesses and of course the American government."
 
-### Foci - Presidents ###
+### Focuses - Presidents ###
 USA_1936_election:0 "The 1936 Election"
 USA_1936_election_desc:0 "The 1936 elections are the most ideological fraught elections in US history to date. Syndicalists and Nationalists, Republicans and Democrats all battle it out at the ballot box to see who will become the President of the United States of America. In the end though only one can be president."
 USA_president_reed:0 "President Reed"
@@ -60,7 +60,7 @@ USA_banking_act_desc:0 "To help get Americans back to work and improve the econo
 USA_wagner_act:0 "Compromise with Reed"
 USA_wagner_act_desc:0 "Curtis has sat down with Reed and has hashed out a compromise with Reed. A set of laws will thus be proposed to Congress to make sure that what was agreed to at the negotiations are implemented. Hopefully these reforms are enough to keep the tinderbox from exploding."
 
-### Foci - MacArthur ###
+### Focuses - MacArthur ###
 USA_general_macarthur:0 "General MacArthur"
 USA_general_macarthur_desc:0 "The threat to America is grave indeed, in order to safeguard America, MacArthur must take charge and keep the country safe from any and all threats foreign or domestic."
 USA_protector_of_democracy:0 "Protector of Democracy"
@@ -84,7 +84,7 @@ USA_military_junta_desc:0 "America is still not ready yet for full democracy. It
 USA_american_ceaser:0 "The American Caesar"
 USA_american_ceaser_desc:0 "MacArthur is now triumphant, his enemies are destroyed and the power he has to protect America will not be given up to allow some radical to destroy it. He will rule the country as the American Caesar, a dictator. But through MacArthur America will know peace and happiness once again."
 
-### Foci - Army ###
+### Focuses - Army ###
 USA_review_military:0 "Review the American Military"
 USA_review_military_desc:0 "War is upon us and in order to defend America we must review our Military Force. It has been ages since the US fought a large scale war, unfortunately the time has come to review and build up the Military to defend America from all who threaten her."
 USA_army:0 "The US Army"
@@ -116,7 +116,7 @@ USA_fight_for_america_desc:0 "Now that are military plans are finished it is tim
 USA_army_rangers:0 "Army Ranger Corps"
 USA_army_rangers_desc:0 "We should form the Army Ranger Corps to serve as the army's elite units. They will function as the elite special forces and be the first into battle against all enemies of America."
 
-### Foci - Navy ###
+### Focuses - Navy ###
 USA_usn:0 "The US Navy"
 USA_usn_desc:0 "The United States Navy is in need of major reform. The army hasn't seen much reform since the days of Teddy Roosevelt and his Great White Fleet. So let us modernise the country and make sure that it befits the modern America."
 USA_battle_ships:0 "Adams's Battleships"
@@ -142,7 +142,7 @@ USA_marine_corps_desc:0 "The United States Marine Corps is one the elite branch 
 USA_new_aircraft_carriers:0 "New Aircraft Carriers"
 USA_new_aircraft_carriers_desc:0 "As time goes on we need to modernise our Aircraft Carriers and make sure that we do not languish in keeping our navy up to date."
 
-### Foci - Air Force ###
+### Focuses - Air Force ###
 USA_usaf:0 "The USAAC"
 USA_usaf_desc:0 "The United States Army Air Corps or USAAC is the most recent 'branch' of the Armed Forces. Though technically under the army in practice the USAAC is independent of the Army command. As the youngest section of the armed we should make sure that we modernise our air forces."
 USA_air_supremecy:0 "Rickenbacker's Air Supremacy"
@@ -164,7 +164,7 @@ USA_found_wasp_desc:0 "Leaders of the USAAC have proposed that we create the WAS
 USA_rocketry:0 "American Rocketry"
 USA_rocketry_desc:0 "We need to keep up with new developments in Aircraft technology. Thus we should focus on giving research grants to those that are focusing on Jet and rocketry research. Perhaps there is a breakthrough here that will give us the edge we need."
 
-### Foci - War Economy ###
+### Focuses - War Economy ###
 USA_war_economy:0 "The American War Economy"
 USA_war_economy_desc:0 "The civil war is now upon us. It is time to change the economy to war. The issues of the Depression are no longer a problem. Sadly it looks like blood was the only way to resolve it."
 USA_move_industry_west:0 "Move Industry West"
@@ -194,7 +194,7 @@ USA_esmwt_desc:0 "The Engineering, Science, and Management War Training program 
 USA_militerized_economy:0 "We can do it!"
 USA_militerized_economy_desc:0 "Everything is on the line for victory. Yet, Americans are strong and determined. We can do it and nothing will stop America till victory has been achieved."
 
-### Foci - Reconstruction ###
+### Focuses - Reconstruction ###
 USA_reconstruction:0 "Reconstructing America"
 USA_reconstruction_desc:0 "The civil war is now over and it is time to focus on rebuilding America from the devastation of the civil war. It will take some time to fully recover from the effects of the Civil War..."
 USA_post_war_america:0 "Post Civil-War America"
@@ -224,7 +224,7 @@ USA_rebuilt_america_desc:0 "After many years, America has been rebuilt. Every re
 USA_america_reborn:0 "America is reborn"
 USA_america_reborn_desc:0 "Reconstruction has finally ended. The civil war can finally be put to rest. Though the scars of the civil war still will haunt America at least we can now focus on the future."
 
-### Foci - New Deal ###
+### Focuses - New Deal ###
 USA_the_new_deal:0 "The Fair Deal"
 USA_the_new_deal_desc:0 "We had the Square Deal, now it is time for the Fair Deal. One that will be square and fair for all Americans. The fair deal calls for massive government programs to help get the economy of the country back on her feet but it is necessary to get us out of the Depression once and for all."
 USA_found_fera:0 "Expand ERA"
@@ -268,7 +268,7 @@ USA_social_security_desc:0 "One of the more ambitious plans of the Fair Deal is 
 USA_economy_has_recovered:0 "The Economy Has Recovered"
 USA_economy_has_recovered_desc:0 "It has taken us a number of years to get to this point. But finally the Great Depression is over. The economic crisis which nearly destroyed America is fully over and we can look to a brighter future."
 
-### Foci - Foreign Policy ###
+### Focuses - Foreign Policy ###
 USA_foreign_policy:0 "The Monroe Doctrine"
 USA_foreign_policy_desc:0 "With the political crisis now over it is time to re-examine our place on the world stage. The Monroe doctrine must be re-enforced and the issues in America's backyard must be dealt with."
 USA_form_pax_americana:0 "League of American States"
