--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -283,7 +283,7 @@ ukraine.48.d:0 "Romanian King published a note, where he insists that Bessarabia
 ukraine.48.a:0 "Then it is war"
 ukraine.48.b:0 "We don't need Bessarabia"
 
-### Foci ###
+### Focuses ###
 
 UKR_Our_Future:0 "Our Future"
 UKR_Our_Future_desc:0 "The agricultural crisis has almost shattered an Ukrainian economy and stability in the country. The King barely controls the country, the loyal to the Hetman peasants want land reforms, the pro-Russian forces and the Nationalists claims the radical measures and the Syndicalists mobilises their supporters all over the country..."
