--- a/localisation/KR_Union_of_Britain_l_english.yml
+++ b/localisation/KR_Union_of_Britain_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 ENG_tuc:0 "The 1936 Congress of the Trade Unions"
 ENG_tuc_desc:0 "This years' TUC will probably be a bit special - long-time Chairman Philip Snowden has indicated that he intends to resign. The decentralisationist Autonomists, led by Niclas y Glais, centralisationist Maximists (Oswald Mosley) and Status Quo Federationists (Arthur Horner) with his egalitarian & pacifist running mate Sylvia Pankhurst are all vying for superiority. These will be nights to remember..."
 ENG_tuc_economy:0 "Economic Policy"
