--- a/localisation/KR_United_Kingdom_l_english.yml
+++ b/localisation/KR_United_Kingdom_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 UK_milgov:0 "Military Provisional Government"
 UK_milgov_desc:0 "Appoint a Military Provisional Government led by the Social Conservative Lord Mountbatten to lead the Kingdom until further notice."
 UK_civgov:0 "Civilian Provisional Government"
