--- a/localisation/KR_Uruguay_l_english.yml
+++ b/localisation/KR_Uruguay_l_english.yml
@@ -22,7 +22,7 @@ URG_syndicalist_party_long:0 "Partido Sindicalista de Uruguay"
 URG_totalist_party:0 "PRTT"
 URG_totalist_party_long:0 "Partido da Revolução Transitória Total"
 
-### Foci ###
+### Focuses ###
 URG_nationbuilding:0 "Nationbuilding"
 URG_expell_argetine_farmers:0 "Expel Argentine Farmers"
 URG_infrastructurerenewal:0 "Infrastructure Renewal"
