--- a/localisation/KR_Venezuela_l_english.yml
+++ b/localisation/KR_Venezuela_l_english.yml
@@ -44,7 +44,7 @@ VEN_syndicalist_party_long:0 "Partido Sindico-Anarquista Venezolano"
 VEN_totalist_party:0 "MIRST"
 VEN_totalist_party_long:0 "Movimiento de Izquierda Revolucionaria Social Totalista"
 
-### Foci ###
+### Focuses ###
 VEN_indreseach:0 "Industrial Improvements"
 VEN_ecofac:0 "Industrial Construction"
 VEN_indreseach2:0 "Industrial Advancements"
