--- a/localisation/KR_Yunnan_l_english.yml
+++ b/localisation/KR_Yunnan_l_english.yml
@@ -294,7 +294,7 @@ yunnan.53.t:0 "Unity for China!"
 yunnan.53.d:0 "The National protection Alliance has accepted our push for the total unification of our countries. This is a great day for all of China!"
 yunnan.53.a:0 "Bring them into the fold!" 
 
-### Foci ###
+### Focuses ###
 YUN_army_effort:0 "Army Effort"
 YUN_army_effort_desc:0 "Despite the increasing possibilities of aerial and naval warfare, ground combat is still key in tomorrow's wars. With preparation, we can avoid reliving the hell of the trenches."
 YUN_equipment_effort:0 "Equipment Effort"
