--- a/localisation/KR_Chinese_Republic_l_english.yml
+++ b/localisation/KR_Chinese_Republic_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-### Foci ###
+### Focuses ###
 CHI_army_effort:0 "Army Effort"
 CHI_army_effort_desc:0 "Despite the increasing possibilities of aerial and naval warfare, ground combat is still key in tomorrow's wars. With preparation, we can avoid reliving the hell of the trenches."
 CHI_equipment_effort:0 "Equipment Effort"
