--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -85,12 +85,12 @@ CSA_paternal_autocrat_party_long:0 "America First Party"
 CSA_national_populist_party:0 "AFP"
 CSA_national_populist_party_long:0 "America First Party"
 
-### Foci ###
+### Focuses ###
 CSA_civil_war:0 "Second American Revolution"
 CSA_civil_war_desc:0 "The Second American Revolution is now upon us. It is time to fight back against the reactionary forces of America and bring forth a new and better America!"
 CSA_will_get_bypassed_tooltip:0 "CSA will by pass this event when the corresponding event has passed."
 
-### Military Foci - Army ###
+### Military Focuses - Army ###
 CSA_civil_military:0 "The People's Liberation Army"
 CSA_civil_military_desc:0 "It is time to build up an army of the people. We need a military of the people and for the people, to liberate the people from the shackles of wage slavery."
 CSA_milita:0 "Support the Militias"
@@ -124,7 +124,7 @@ CSA_peoples_rangers_desc:0 "We should organise a special forces division of the 
 CSA_civil_war_lessons:0 "Lessons from the Revolution"
 CSA_civil_war_lessons_desc:0 "We have won our revolution. Victory for the working Class. However new wars loom on the horizon. While we have smashed the reactionary capitalists here in America they still persist across the world. Thus it is best we take time to modernise our guns and prepare for the future conflicts that will come."
 
-### Military Foci - Navy ###
+### Military Focuses - Navy ###
 CSA_peoples_navy:0 "The People's Liberation Navy"
 CSA_peoples_navy_desc:0 "The battle for freedom of the American Workers will not just be fought on land, it will also be fought on the Seas. Just as in the days of John Paul Jones who fought in the first revolution, we shall need a new navy of the people to sink the reactionaries to the bottom of the deep blue sea."
 CSA_rickover_plan:0 "Rickover's Battleship Plan"
@@ -150,7 +150,7 @@ CSA_new_carriers_desc:0 "With the Revolution over, it is time that we expand and
 CSA_new_battleships:0 "New Battleships"
 CSA_new_battleships_desc:0 "With the Revolution over, it is time that we expand and modernise our Battleships to fight the reactionaries of the people across the world wherever they may be. We will need the best Battleships to bring the foreign capitalists to their knees."
 
-### Military Foci - Air ###
+### Military Focuses - Air ###
 CSA_red_airforce:0 "The People's Liberation Air Force"
 CSA_red_airforce_desc:0 "The Revolution and future battles for the Freedom for the Workers of America and the World will not just be fought on land; it will also be fought in the skies. We shall create our own Air Force. We shall blast the reactionaries and capitalists out of the skies and fly the banner of freedom across America."
 CSA_air_support:0 "Air Support"
@@ -174,7 +174,7 @@ CSA_warning_systems_desc:0 "We have to deal with numerous different aircraft fro
 CSA_rocketry:0 "American Rockets"
 CSA_rocketry_desc:0 "The airforce proposes that we look into Rocketry and how that technology can be used to fight the reactionary forces of Capitalism."
 
-### Economic Foci ###
+### Economic Focuses ###
 CSA_war_syndicalism:0 "War Syndicalism"
 CSA_war_syndicalism_desc:0 "The Revolution can not be brought to fruition through force alone. We need to set up the economic policy for the Revolution. Some think that we shall have a centralised planning committee to organise the economy. This is strongly opposed by those that think a more orthodox syndicalism as the proper economic policy."
 CSA_nationalization:0 "Nationalisation"
@@ -226,7 +226,7 @@ CSA_workplace_democracy_desc:0 "The revolution must continue and be extended to 
 CSA_syndicalism:0 "Syndicalist Economy"
 CSA_syndicalism_desc:0 "We have wiped away the vestiges of capitalism and replaced it with a worker's economy controlled by the people. Through worker's cooperatives, democracy and self-management we have brought forth syndicalism to America. The dawn of a new day is upon us. The chains are broken!"
 
-### Second Constitutional Convention Foci ###
+### Second Constitutional Convention Focuses ###
 CSA_second_convention:0 "Second Constitutional Convention"
 CSA_second_convention_desc:0 "Now that the revolution has been won, a second constitutional convention has be called. The convention shall be hosted at the city of Philadelphia, the site of the original Constitutional Convention. Many questions about the shape of what the nation shall look like shall be addressed here, and already factions have started to be formed."
 CSA_confedration:0 "Unionist Victory"
@@ -282,7 +282,7 @@ CSA_red_constitution:0 "Red Constitution"
 CSA_red_constitution_desc:0 "Now that the form of government has been properly hammered out, it is time to write out the second American Constitution. This one will truly be for the people, by the people, and of the people. Long live the Revolution!"
 CSA_red_constitution_tooltip:0 "You will get a National Idea depending on which path you go down"
 
-### Reconstruction Foci ###
+### Reconstruction Focuses ###
 CSA_reconstruction:0 "Reconstructing America"
 CSA_reconstruction_desc:0 "Now that the Second constitution convention has come to a close and we have written up the new constitution, it is time to focus on reconstruction efforts and rebuilding from the civil war. The revolutionary war was a bloody conflict, now it is time to rebuild."
 CSA_desegregation:0 "Desegregation Efforts"
@@ -324,7 +324,7 @@ CSA_nuclear_unions_desc:0 "As we have begun to advance our energy supply, it is 
 CSA_taming_america:0 "Taming America"
 CSA_taming_america_desc:0 "As part of the five year plan, but of the plan calls for the Taming America project to expand the mining and resources production throughout the country. As part of this project, a number of new national parks will be created so that the beauty of America will be preserved. Thus we shall have the best of both worlds, the resources of America and the beauty of America."
 
-### Reed Doctrine Foci ###
+### Reed Doctrine Focuses ###
 CSA_reed_doctrine:0 "Reed Doctrine"
 CSA_reed_doctrine_desc:0 "With the new Constitution in place, we can now look across the world and do our part to help the workers of the world."
 CSA_paris_summet:0 "The Paris Summit"
