--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -85,7 +85,7 @@ FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
 FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
 FNG_SILVER_RESERVE_FULL:0 "Silver Reserve Full"
 
-### Foci ###
+### Focuses ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
 FNG_Preservation_of_the_Xinhai_Order_desc:0 "Ironically, Fengtian is the sole national government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although its republican commitments are questionable, and Southern reclamation is currently unrealistic, the government has loudly advocated both goals, as they foster domestic legitimacy."
 FNG_Fuguo_Qiangbing:0 "Fuguo Qiangbing"
