--- a/localisation/KR_General_l_english.yml
+++ b/localisation/KR_General_l_english.yml
@@ -545,7 +545,7 @@ jet_aircraft_manufacturer:0 "Jet aircraft manufacturer"
 independent_war:0 "Independent war"
 independent_war_desc:0 "This country is currently in a independent war. It does not want other countries to get involved directly in the war."
 
-### Generic Foci ###
+### Generic Focuses ###
 army_effort:0 "Army Effort"
 army_effort_desc:0 "Despite the increasing possibilities of aerial and naval warfare, ground combat is still key in tomorrow's wars. With preparation, we can avoid reliving the hell of the trenches."
 equipment_effort:0 "Equipment Effort"
