--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -15,7 +15,7 @@ KOR_integrate_japs_desc:0 "We have decided to integrate Japanese settlers to our
 JAP_fengtian_bailout:0 "Fengtian Bailout"
 JAP_fengtian_bailout_desc:0 "We are bailing out the Fengtian Government by purchasing sufficient silver to fill their reserve."
 
-### Foci ###
+### Focuses ###
 JAP_demand_indonesia:0 "Demand Indonesia!"
 JAP_demand_indonesia_desc:0 "For centuries Indonesia has toiled under the oppression of Dutch colonial rule, and its vast resources lining European pockets. This injustice must end, we must liberate these resources for the co-prosperity sphere, where they rightfully belong!"
 jap_ino_demand:0 "After the end of the Dutch colonial regime, Indonesia became a 'free' nation, trying to navigate the cruel ocean that is sovereignty. In reality, Indonesia is nothing more than an artificial byproduct of western imperialism. Let us end this pointless charade and bring the Indonesians into the fold!"
