--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -20,7 +20,7 @@ JAP_paternal_autocrat_party_long:0 "Kokumin Dōmei (National Alliance)"
 JAP_authoritarian_democrat_party_long2:0 "Imperial Rule Assistance Society"
 JAP_national_populist_party_long:0 "Tōhōkai (Society of the East)"
 
-### Foci ###
+### Focuses ###
 JAP_NSA_focus:0 "The National Security Act"
 JAP_NSA_focus_desc:0 "A debate in the Diet regarding the national security act has been raging for the past few weeks, and it is time for us to decide which course our nation will take. Some conservative members of the Diet fear that if the act isn't passed, radical elements in society will try to seize power. The future of Japan is in our hands."
 JAP_imperialist_path:0 "The Longest Day"
