--- a/localisation/KR_Legation_Cities_l_english.yml
+++ b/localisation/KR_Legation_Cities_l_english.yml
@@ -74,7 +74,7 @@ INVEST_NO_SEIZED:0 "Investments left alone"
 INVESTMENTS_SEIZED:0 "Investments seized"
 INVESTMENTS_COMPENSATED:0 "Investments seized, but compensated"
 
-### Foci ###
+### Focuses ###
 LEC_big_trouble_in_shanghai:0 "Big trouble in Shanghai"
 LEC_side_with_the_establishment:0 "Side with the establishment"
 LEC_police_1:0 "Expand the police force"
