--- a/localisation/KR_Netherlands_l_english.yml
+++ b/localisation/KR_Netherlands_l_english.yml
@@ -14,7 +14,7 @@ HOL_syndie3_desc:0 "Patriotic spirit against the enemies of Dutch proletariat...
 HOL_crisis:0 "Economic Chaos"
 HOL_crisis_desc:0 "The Netherlands are plunged into economic problems since Black Monday crisis has arrived. This also includes numerous local strikes and mutiny in the political scene."
 
-### Foci ###
+### Focuses ###
 HOL_east_indies_aut:0 "Autonomy for Dutch East Indies?"
 HOL_east_indies_aut_desc:0 "The people of the Netherlands East Indies have been calling for their independence. While maintaining colonies has been difficult these past years, we would lose many of our resources that are generated from the area. Increasing hostilities in the area have also threatened our colony."
 HOL_east_indies_aut_2:0 "Autonomous Indonesia"
