--- a/localisation/KR_Peru_l_english .yml
+++ b/localisation/KR_Peru_l_english .yml
@@ -39,7 +39,7 @@ PBC_full:0 "Federalised Union"
 BM_andes:0 "Black Monday hit the Andes"
 PRU_refused_union:0 "Bolivia refused our Union offer"
 
-### Foci ###
+### Focuses ###
 PRU_black_monday:0 "Black Monday Reaction"
 PRU_black_monday_desc:0 "Disaster and panic! Our economy is nothing short of a wreck after Black Monday. Our government must act quickly and decisively"
 PRU_intervene_decisevely:0 "Intervene Decisively"
