--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -67,7 +67,7 @@ POL_entente_research_idea_desc:0 "The entente holds a distinct edge in Fighter d
 POL_suffrage_idea:0 "Women's Suffrage"
 POL_suffrage_idea_desc:0 "The Polish Republic allows all of her citizen's equal right to vote, and reaps the rewards from doing so."
 
-### Foci ###
+### Focuses ###
 POL_the_great_debate:0 "The Great Debate"
 polands_future:0 "The Regency Council will attempt to elect a new King of Poland, as they have done for the past 20 years."
 pol_succession:0 "In the event of the King's untimely demise, the succession will be secured."
