--- a/localisation/KR_Spain_FAI_l_english.yml
+++ b/localisation/KR_Spain_FAI_l_english.yml
@@ -2,7 +2,7 @@
 
 ### Ideas ###
 
-### Foci ###
+### Focuses ###
 CNT_election_success:0 "Election Success"
 CNT_election_success_tooltip:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster.\n\n"
 CNT_aftermath_of_civil_war:0 "Aftermath of the Civil War"
